--- a/FrontendDIH/src/app/components/admin/dodaj-smjenu/dodaj-smjenu.component.html
+++ b/FrontendDIH/src/app/components/admin/dodaj-smjenu/dodaj-smjenu.component.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form class="smjena-form">
+        <h3>Dodaj smjenu</h3>
         <label for="naziv">Naziv:</label>
         <input type="text" id="naziv" name="naziv" required>
         
