--- a/FrontendDIH/src/app/components/admin/dodaj-hr/dodaj-hr.component.css
+++ b/FrontendDIH/src/app/components/admin/dodaj-hr/dodaj-hr.component.css
@@ -9,24 +9,30 @@ body {
     background-color: #f4f4f4;
 }
 
-.smjena-form {
+.container {
     background-color: #fff;
-    padding: 20px;
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-label {
+h2 {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+hr-employee-form label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 input[type="text"],
-input[type="time"],
+input[type="password"],
+input[type="file"],
 button {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
