--- a/FrontendDIH/src/app/components/admin/admin-home/admin-home.component.html
+++ b/FrontendDIH/src/app/components/admin/admin-home/admin-home.component.html
@@ -205,7 +205,8 @@ c-23 2 -44 0 -48 -4z" />
                         </a>
                     </li>
                     <li>
-                        <a routerLink="novost-index" class="nav-link link-dark">
+                        <a routerLink="smjena-index" class="nav-link link-dark"
+                            [class.active]="isCurrentRoute('smjena-index')">
                             <svg class="strokesvg"
                                 xmlns="http://www.w3.org/2000/svg" width="24"
                                 height="24"
