--- a/FrontendDIH/src/app/components/HR/hr-index/hr-index.component.html
+++ b/FrontendDIH/src/app/components/HR/hr-index/hr-index.component.html
@@ -1,1 +1,193 @@
-<p>hr-index works!</p>
+<div class="top-container-sidebar">
+    <div #mysidebar id="mySidebar" class="sidebar">
+        <a class="closebtn" (click)="closeNav()"><i
+                class="fa-solid fa-xmark fa-sm"></i>X</a>
+        <div class="nesto" style="width: 90%;  ">
+
+            <nav class="nav-bar">
+                <header>
+                    <div id="heder">
+                        <a href="/"
+                            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                        </a>
+                    </div>
+
+                    <svg class="nesto2" version="1.0"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="190px" height="90px"
+                        viewBox="0 0 1600.000000 900.000000"
+                        preserveAspectRatio="xMidYMid meet">
+
+                        <g
+                            transform="translate(0.000000,900.000000) scale(0.100000,-0.100000)"
+                            fill="#000000" stroke="none">
+                            <path
+                                d="M7794 7211 c-48 -22 -84 -64 -84 -98 0 -70 62 -116 178 -129 l62 -7
+0 -173 0 -174 130 0 130 0 0 174 0 174 58 6 c85 10 118 24 152 62 52 60 31
+126 -54 165 -36 16 -69 19 -286 19 -217 0 -250 -3 -286 -19z" />
+                            <path
+                                d="M9189 6821 c-50 -51 -37 -117 42 -212 l38 -46 -124 -130 -123 -130
+91 -88 91 -88 126 132 125 132 30 -31 c40 -42 116 -80 160 -80 81 0 120 92 76
+178 -25 49 -327 345 -380 371 -60 31 -116 28 -152 -8z" />
+                            <path
+                                d="M7875 6354 c-99 -17 -223 -55 -308 -93 -75 -34 -92 -61 -58 -94 23
+-24 10 -26 146 31 82 34 212 68 303 78 l62 7 0 -147 c0 -83 5 -156 10 -167 12
+-21 50 -25 68 -7 8 8 12 59 12 165 l0 153 39 0 c111 0 316 -57 451 -125 69
+-35 179 -111 245 -169 l40 -35 -113 -108 c-61 -59 -112 -114 -112 -121 0 -26
+21 -52 43 -52 14 0 53 30 107 83 47 45 97 92 112 105 l26 23 57 -78 c70 -95
+116 -186 155 -301 29 -87 60 -238 60 -293 l0 -29 -166 0 c-95 0 -174 -4 -185
+-10 -21 -12 -25 -50 -7 -68 8 -8 64 -12 185 -12 l173 0 0 -32 c0 -98 -46 -273
+-106 -405 -36 -80 -137 -233 -181 -275 l-29 -28 -114 115 c-63 63 -122 115
+-130 115 -22 0 -40 -20 -40 -44 0 -21 36 -63 157 -188 l66 -66 -83 -62 c-171
+-126 -424 -220 -595 -220 l-55 0 0 155 c0 152 -1 156 -22 164 -15 6 -30 5 -43
+-4 -18 -11 -20 -25 -23 -165 l-3 -153 -73 7 c-62 6 -215 40 -267 61 -9 3 -26
+-3 -39 -13 -21 -17 -23 -23 -13 -45 10 -21 28 -31 95 -51 121 -37 217 -50 363
+-50 332 1 629 126 867 364 235 236 358 531 358 859 0 490 -271 917 -713 1126
+-213 101 -494 139 -722 99z" />
+                            <path
+                                d="M6906 6114 c-19 -18 -20 -28 -6 -55 10 -18 24 -19 245 -19 221 0 235
+1 245 19 14 27 13 37 -6 55 -13 14 -49 16 -239 16 -190 0 -226 -2 -239 -16z" />
+                            <path
+                                d="M6452 5788 c-19 -19 -14 -45 10 -62 19 -14 70 -16 353 -16 283 0 334
+2 353 16 24 17 29 43 10 62 -9 9 -103 12 -363 12 -260 0 -354 -3 -363 -12z" />
+                            <path
+                                d="M6268 5433 c-23 -6 -34 -49 -18 -68 11 -13 70 -15 406 -15 344 0 395
+2 408 16 21 20 20 30 -4 54 -19 19 -33 20 -397 19 -208 -1 -386 -3 -395 -6z" />
+                            <path
+                                d="M6276 5034 c-19 -18 -20 -28 -6 -55 10 -18 25 -19 383 -19 392 0 397
+1 397 45 0 44 -5 45 -391 45 -321 0 -370 -2 -383 -16z" />
+                            <path
+                                d="M6320 4651 c-14 -27 -13 -37 6 -55 13 -14 62 -16 383 -16 386 0 391
+1 391 45 0 44 -5 45 -397 45 -358 0 -373 -1 -383 -19z" />
+                            <path
+                                d="M6536 4284 c-19 -18 -21 -45 -4 -62 17 -17 749 -17 766 0 18 18 14
+56 -7 68 -13 6 -151 10 -380 10 -314 0 -362 -2 -375 -16z" />
+                            <path
+                                d="M7012 3978 c-7 -7 -12 -21 -12 -33 0 -43 13 -45 250 -45 237 0 250 2
+250 45 0 43 -13 45 -250 45 -162 0 -229 -3 -238 -12z" />
+                            <path
+                                d="M5936 2941 c-10 -11 -16 -31 -14 -48 3 -27 6 -28 53 -28 49 0 50 0
+53 33 5 56 -55 84 -92 43z" />
+                            <path
+                                d="M8997 2954 c-12 -12 -8 -512 3 -519 6 -4 29 -4 50 0 39 7 40 8 40 47
+0 45 32 98 58 98 11 0 34 -28 61 -70 46 -75 66 -87 119 -73 l30 8 -64 97 c-35
+54 -64 103 -64 110 0 7 25 39 55 70 30 31 55 61 55 67 0 6 -19 11 -42 11 -39
+0 -48 -5 -115 -72 -48 -47 -76 -69 -83 -62 -5 5 -11 72 -12 149 l-3 140 -40 3
+c-23 2 -44 0 -48 -4z" />
+                            <path
+                                d="M9439 2947 c-23 -18 -30 -46 -19 -68 14 -25 95 -28 104 -3 22 58 -37
+108 -85 71z" />
+                            <path
+                                d="M5447 2904 c-13 -14 -7 -62 9 -68 9 -3 45 -6 80 -6 l64 0 0 -189 c0
+-141 3 -192 13 -198 18 -11 39 -14 64 -8 22 5 23 8 25 198 l3 192 55 3 c93 4
+102 8 98 45 l-3 32 -201 3 c-110 1 -203 -1 -207 -4z" />
+                            <path
+                                d="M7422 2873 l3 -38 65 -3 c36 -2 69 -7 73 -11 4 -4 8 -90 8 -189 1
+-171 2 -183 20 -193 11 -6 33 -7 49 -4 l30 6 2 192 3 192 75 5 75 5 3 38 3 37
+-206 0 -206 0 3 -37z" />
+                            <path
+                                d="M10344 2863 c-12 -10 -27 -28 -33 -40 -10 -19 -18 -22 -74 -20 -137
+4 -212 -83 -157 -180 l22 -39 -22 -37 c-21 -35 -21 -38 -6 -69 15 -30 15 -33
+-4 -53 -42 -44 -18 -103 53 -133 36 -15 138 -15 190 0 46 14 92 56 101 93 8
+30 -17 90 -42 101 -9 4 -61 10 -115 13 -101 7 -135 22 -118 50 6 10 36 16 93
+19 91 5 120 18 144 63 20 39 18 82 -6 112 -28 35 -25 51 13 68 24 10 32 20 32
+39 0 32 -40 38 -71 13z m-89 -125 c56 -25 39 -110 -24 -116 -43 -4 -71 21 -71
+63 0 27 6 35 33 49 39 19 31 18 62 4z m64 -325 c20 -16 20 -20 7 -38 -11 -16
+-29 -20 -89 -23 -67 -4 -77 -2 -98 19 l-22 22 23 19 c31 25 148 26 179 1z" />
+                            <path
+                                d="M6332 2802 c-19 -2 -48 -12 -65 -23 -40 -24 -43 -24 -50 1 -4 15 -14
+20 -40 20 -31 0 -36 -4 -42 -29 -3 -16 -4 -95 0 -177 5 -135 7 -150 24 -158
+11 -5 31 -6 45 -2 31 8 37 35 34 154 -2 82 0 94 20 114 26 29 69 34 94 11 16
+-14 18 -33 18 -139 0 -113 2 -124 20 -134 19 -10 59 -8 80 5 6 4 10 55 10 124
+0 106 2 120 20 136 24 22 84 25 103 7 8 -9 13 -56 15 -141 l4 -129 41 -5 c23
+-3 45 -3 49 -1 15 10 9 251 -7 292 -30 74 -133 99 -199 48 -19 -14 -38 -26
+-41 -26 -3 0 -21 11 -38 24 -39 28 -53 32 -95 28z" />
+                            <path
+                                d="M8710 2803 c-52 -15 -93 -41 -117 -72 -24 -31 -28 -44 -28 -112 0
+-71 2 -80 30 -115 17 -20 46 -45 65 -55 73 -40 196 -12 232 52 17 29 17 29
+-12 44 -39 20 -45 19 -72 -9 -22 -24 -40 -29 -85 -27 -50 3 -82 82 -62 152 15
+47 41 69 86 69 30 0 63 -21 63 -41 0 -14 53 -10 74 6 17 13 18 18 6 40 -25 46
+-125 84 -180 68z" />
+                            <path
+                                d="M5930 2621 l0 -179 24 -6 c14 -3 36 -2 50 4 l26 10 0 159 c0 88 -3
+166 -6 175 -4 11 -19 16 -50 16 l-44 0 0 -179z" />
+                            <path
+                                d="M6890 2780 c-52 -28 -83 -81 -88 -149 -5 -70 17 -121 70 -164 65 -52
+181 -50 239 4 31 29 31 30 14 49 -21 23 -57 26 -74 6 -27 -33 -115 -23 -139
+15 -24 38 -2 48 121 51 l112 3 0 57 c0 64 -20 100 -71 129 -41 24 -138 24
+-184 -1z m150 -72 c11 -12 20 -24 20 -27 -1 -21 -22 -28 -80 -27 -54 1 -65 4
+-68 19 -10 52 87 79 128 35z" />
+                            <path
+                                d="M7860 2620 c0 -179 0 -180 23 -185 12 -4 35 -1 50 4 l27 11 0 114 0
+115 30 21 c16 12 45 24 64 27 27 4 35 11 39 32 3 14 3 29 0 33 -9 15 -73 8
+-105 -12 -41 -25 -44 -25 -51 0 -4 15 -14 20 -41 20 l-36 0 0 -180z" />
+                            <path
+                                d="M8214 2786 c-32 -17 -54 -37 -65 -58 -8 -15 -4 -21 26 -35 35 -17 35
+-16 63 10 47 45 117 32 124 -23 3 -24 -2 -26 -80 -45 -108 -27 -147 -59 -139
+-114 7 -56 39 -84 101 -88 38 -3 61 1 90 16 l39 21 34 -21 c46 -29 103 -20
+103 16 0 14 -4 25 -9 25 -5 0 -17 7 -25 16 -12 12 -16 38 -16 117 0 110 -6
+126 -62 160 -32 20 -151 22 -184 3z m150 -218 c-1 -10 -2 -24 -3 -31 -3 -32
+-89 -48 -112 -21 -18 21 -2 43 41 59 47 17 75 14 74 -7z" />
+                            <path
+                                d="M9430 2621 l0 -178 30 -6 c60 -12 60 -12 60 184 l0 179 -45 0 -45 0
+0 -179z" />
+                            <path
+                                d="M9630 2621 l0 -179 28 -3 c15 -2 37 -3 50 -1 21 3 22 7 22 120 0 131
+9 156 60 167 40 9 67 -1 76 -28 4 -12 6 -75 5 -139 -2 -115 -2 -117 21 -120
+13 -2 35 -1 51 1 l27 3 0 145 0 146 -36 33 c-31 29 -42 34 -86 34 -35 0 -62
+-7 -86 -22 l-35 -22 -15 22 c-10 15 -25 22 -48 22 l-34 0 0 -179z" />
+                        </g>
+                    </svg>
+
+                </header>
+
+                <ul class="nav nav-pills flex-column mb-auto" width="130%">
+
+                    <li>
+                        <a routerLink="kontrolna-tabla"
+                            class="nav-link link-dark">
+                            <svg class="strokesvg"
+                                xmlns="http://www.w3.org/2000/svg" width="28"
+                                height="28"
+                                viewBox="0 0 24 24" fill="none">
+                                <path
+                                    d="M1 3C1 2.46957 1.21071 1.96086 1.58579 1.58579C1.96086 1.21071 2.46957 1 3 1H5C5.53043 1 6.03914 1.21071 6.41421 1.58579C6.78929 1.96086 7 2.46957 7 3V5C7 5.53043 6.78929 6.03914 6.41421 6.41421C6.03914 6.78929 5.53043 7 5 7H3C2.46957 7 1.96086 6.78929 1.58579 6.41421C1.21071 6.03914 1 5.53043 1 5V3ZM11 3C11 2.46957 11.2107 1.96086 11.5858 1.58579C11.9609 1.21071 12.4696 1 13 1H15C15.5304 1 16.0391 1.21071 16.4142 1.58579C16.7893 1.96086 17 2.46957 17 3V5C17 5.53043 16.7893 6.03914 16.4142 6.41421C16.0391 6.78929 15.5304 7 15 7H13C12.4696 7 11.9609 6.78929 11.5858 6.41421C11.2107 6.03914 11 5.53043 11 5V3ZM1 13C1 12.4696 1.21071 11.9609 1.58579 11.5858C1.96086 11.2107 2.46957 11 3 11H5C5.53043 11 6.03914 11.2107 6.41421 11.5858C6.78929 11.9609 7 12.4696 7 13V15C7 15.5304 6.78929 16.0391 6.41421 16.4142C6.03914 16.7893 5.53043 17 5 17H3C2.46957 17 1.96086 16.7893 1.58579 16.4142C1.21071 16.0391 1 15.5304 1 15V13ZM11 13C11 12.4696 11.2107 11.9609 11.5858 11.5858C11.9609 11.2107 12.4696 11 13 11H15C15.5304 11 16.0391 11.2107 16.4142 11.5858C16.7893 11.9609 17 12.4696 17 13V15C17 15.5304 16.7893 16.0391 16.4142 16.4142C16.0391 16.7893 15.5304 17 15 17H13C12.4696 17 11.9609 16.7893 11.5858 16.4142C11.2107 16.0391 11 15.5304 11 15V13Z"
+                                    stroke-width="1.6" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                            <p>KontrolnaTabla</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="radnik-index"
+                            class="nav-link link-dark">
+                            <svg class="fillsvg"
+                                xmlns="http://www.w3.org/2000/svg" width="24"
+                                height="24"
+                                viewBox="0 0 24 24">
+                                <rect width="24" height="24" fill="white"
+                                    style="mix-blend-mode:multiply" />
+                                <path
+                                    d="M21 4.5V19.5H3V4.5H21ZM21 3H3C2.60218 3 2.22064 3.15804 1.93934 3.43934C1.65804 3.72064 1.5 4.10218 1.5 4.5V19.5C1.5 19.8978 1.65804 20.2794 1.93934 20.5607C2.22064 20.842 2.60218 21 3 21H21C21.3978 21 21.7794 20.842 22.0607 20.5607C22.342 20.2794 22.5 19.8978 22.5 19.5V4.5C22.5 4.10218 22.342 3.72064 22.0607 3.43934C21.7794 3.15804 21.3978 3 21 3Z" />
+                                <path d="M9.75 7.5H4.5V9H9.75V7.5Z" />
+                                <path d="M7.5 10.5H4.5V12H7.5V10.5Z" />
+                                <path
+                                    d="M17.25 13.5H12.75C12.1533 13.5 11.581 13.7371 11.159 14.159C10.7371 14.581 10.5 15.1533 10.5 15.75V17.25H12V15.75C12 15.5511 12.079 15.3603 12.2197 15.2197C12.3603 15.079 12.5511 15 12.75 15H17.25C17.4489 15 17.6397 15.079 17.7803 15.2197C17.921 15.3603 18 15.5511 18 15.75V17.25H19.5V15.75C19.5 15.1533 19.2629 14.581 18.841 14.159C18.419 13.7371 17.8467 13.5 17.25 13.5Z" />
+                                <path
+                                    d="M15 12.75C15.5933 12.75 16.1734 12.5741 16.6667 12.2444C17.1601 11.9148 17.5446 11.4462 17.7716 10.8981C17.9987 10.3499 18.0581 9.74667 17.9424 9.16473C17.8266 8.58279 17.5409 8.04824 17.1213 7.62868C16.7018 7.20912 16.1672 6.9234 15.5853 6.80764C15.0033 6.69189 14.4001 6.7513 13.8519 6.97836C13.3038 7.20542 12.8352 7.58994 12.5056 8.08329C12.1759 8.57664 12 9.15666 12 9.75C12 10.5456 12.3161 11.3087 12.8787 11.8713C13.4413 12.4339 14.2044 12.75 15 12.75ZM15 8.25C15.2967 8.25 15.5867 8.33797 15.8334 8.5028C16.08 8.66762 16.2723 8.90189 16.3858 9.17597C16.4994 9.45006 16.5291 9.75166 16.4712 10.0426C16.4133 10.3336 16.2704 10.6009 16.0607 10.8107C15.8509 11.0204 15.5836 11.1633 15.2926 11.2212C15.0017 11.2791 14.7001 11.2494 14.426 11.1358C14.1519 11.0223 13.9176 10.83 13.7528 10.5834C13.588 10.3367 13.5 10.0467 13.5 9.75C13.5 9.35218 13.658 8.97064 13.9393 8.68934C14.2206 8.40804 14.6022 8.25 15 8.25Z" />
+                            </svg>
+                            <p>Radnici</p>
+                        </a>
+                    </li>
+                </ul>
+
+            </nav>
+        </div>
+    </div>
+</div>
+
+<div id="main">
+    <button class="openbtn" (click)="openNav()">☰</button>
+</div>
+
+<router-outlet #mytable></router-outlet>
