--- a/FrontendDIH/src/app/components/HR/radnik-index/radnik-index.component.html
+++ b/FrontendDIH/src/app/components/HR/radnik-index/radnik-index.component.html
@@ -10,7 +10,7 @@
 <div class="top-container ">
     <header class="py-3">
         <div class="heder1 fs-4">
-            <h2> 'Radnici'</h2>
+            <h2>Radnici</h2>
         </div>
         <hr>
         <div class="das">
