--- a/FrontendDIH/src/app/components/login-index/login-index.component.html
+++ b/FrontendDIH/src/app/components/login-index/login-index.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="onSubmit()">
     <div>
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
